k8s_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafkaconnectsourcejdbc
  labels:
    app: kafkaconnectsourcejdbc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafkaconnectsourcejdbc
  template:
    metadata:
      labels:
        app: kafkaconnectsourcejdbc
    spec:
      containers:
      - name: kafkaconnectsourcejdbc
        image: saulcalla/kafka-connect-source:latest
