k8s_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kafkaconnectjdbc-ingress
spec:
  backend:
    serviceName: kafkaconnectjdbc-service
    servicePort: 8083
